GT-3: fixed SegmentsArrivalBeforeDepartureRule logic
(cherry picked from commit e2d31f2f834a5745a450a4642065d46c4347e33b)